--- a/MestreCuca/templates/perfil_usuario.html
+++ b/MestreCuca/templates/perfil_usuario.html
@@ -8,6 +8,8 @@
 <body>
     <h1>Essa é a página Perfil do Usuário</h1>
     <button><a href="{{url_for('recipes.cadastrar_receitas')}}">cadastrar_receitas</a></button>
+    <button><a href="{{ url_for('users.logout') }}">Sair</a></button>
+    
     
 </body>
 </html>
