--- a/MestreCuca/templates/cadastrar_usuarios.html
+++ b/MestreCuca/templates/cadastrar_usuarios.html
@@ -5,9 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cadastro de Usuário</title>
     <style>
+        @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap');
+
+        * {
+            font-family: 'Montserrat', sans-serif;
+        }
+
         body {
-            font-family: Arial, sans-serif;
-            background-color: #f0f0f0;
+            background-image: url("/static/images/mestre-cuca_fundo5.png");
+            background-repeat: no-repeat; 
+            background-size: 100%; 
             display: flex;
             justify-content: center;
             align-items: center;
@@ -18,15 +25,32 @@
         .container {
             background-color: white;
             padding: 30px;
-            border-radius: 8px;
+            border-radius: 1px;
             box-shadow: 0 0 10px rgba(0,0,0,0.1);
             width: 350px;
         }
 
         h1 {
             text-align: center;
-            color: #333;
+            color: black;
+            margin-top: 20px;
             margin-bottom: 25px;
+            font-size: 25px;
+        }
+
+        .mestre-cuca-logo {
+            width: 100%;
+            height: 40px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+
+        }
+
+        .mestre-cuca-logo img {
+            width: 120px;
+            height: 120px;
+            margin-bottom: 40px;
         }
 
         .form-group {
@@ -36,8 +60,9 @@
         label {
             display: block;
             margin-bottom: 5px;
-            color: #555;
+            color: black;
             font-weight: bold;
+            font-size: 12px;
         }
 
         input {
@@ -46,28 +71,31 @@
             border: 1px solid #ddd;
             border-radius: 4px;
             box-sizing: border-box;
+         
         }
 
         input:focus {
             outline: none;
-            border-color: #007bff;
-            box-shadow: 0 0 5px rgba(0,123,255,0.3);
+            border-color: #db6825;
+            box-shadow: 0 0 5px rgba(15, 18, 20, 0.3);
         }
 
         button {
-            width: 100%;
-            padding: 12px;
-            background-color: #007bff;
+            width: 45%; 
+            padding: 9px; 
+            background-color: black;
             color: white;
             border: none;
             border-radius: 4px;
             cursor: pointer;
-            font-size: 16px;
+            font-size: 14.5px;
             font-weight: bold;
+            margin: 0 auto; 
+            display: block; 
         }
 
         button:hover {
-            background-color: #0056b3;
+            background-color:#db6825;;
         }
 
         .password-error {
@@ -78,8 +106,10 @@
         }
 
         a {
-            color: #1877f2;
-            text-decoration: none;
+            font-size: 15px;
+            color: black;
+            text-decoration: underline;
+            font-style: italic;
         }
 
         a:hover {
@@ -87,35 +117,39 @@
         }
 
         .signup {
+            font-size: 15px;
             text-align: center;
             margin-top: 20px;
             color: #606770;
+
         }
     </style>
 </head>
 <body>
     <div class="container">
-
+        <div class="mestre-cuca-logo">
+            <img src="/static/images/mestre-cuca_login.png">
+        </div>
         <h1>Cadastre-se</h1>
         <form id="cadastroForm" action="{{url_for('users.cadastrar_user')}}" method="post">
             <div class="form-group">
-                <label for="nome">Nome:</label>
-                <input type="text" id="nome" name="nome" required>
+                <label for="nome">Nome</label>
+                <input type="text" id="nome" name="nome" required  placeholder="Nome de Usuário">
             </div>
 
             <div class="form-group">
-                <label for="email">E-mail:</label>
-                <input type="email" id="email" name="email" required>
+                <label for="email">E-mail</label>
+                <input type="email" id="email" name="email" required placeholder="Email">
             </div>
 
             <div class="form-group">
-                <label for="senha">Senha:</label>
-                <input type="password" id="senha" name="senha" required minlength="6">
+                <label for="senha">Senha</label>
+                <input type="password" id="senha" name="senha" required minlength="6" placeholder="Senha">
             </div>
 
             <div class="form-group">
-                <label for="confirmarSenha">Confirmar Senha:</label>
-                <input type="password" id="confirmarSenha" name="confirmarSenha" required minlength="6">
+                <label for="confirmarSenha">Confirmar senha</label>
+                <input type="password" id="confirmarSenha" name="confirmarSenha" required minlength="6" placeholder="Confirme sua senha">
                 <div class="password-error" id="passwordError">As senhas não coincidem!</div>
             </div>
 
