--- a/MestreCuca/templates/cadastrar_receitas.html
+++ b/MestreCuca/templates/cadastrar_receitas.html
@@ -3,17 +3,165 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <title>Cadastro de Receitas</title>
     <style>
-        body {
-            font-family: 'Arial', sans-serif;
-            background-color: #f5f5f5;
+        @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap');
+
+        * {
+            font-family: 'Montserrat', sans-serif;
             margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        body {
+            background-image: url("/static/images/mestre-cuca_fundo5.png");
+            background-repeat: no-repeat; 
+            background-size: cover; 
+            display: flex;
+            flex-direction: column;
+            height: 100vh;
+        }
+
+        header {
+            background-color: #ffff;
+            padding: 10px 20px;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            height: 80px;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            z-index: 1000; 
+        }
+
+        header h1 {
+            font-size: 24px;
+            font-weight: 600;
+            margin-left: 20px;
+        }
+
+        .logo img {
+            width: 200px;
+            height: auto;
+            display: block;
+            
+        }
+
+        header .logo {
+            text-align: right;
+            margin: 0;
+        }
+
+        nav ul {
+            list-style: none;
+            padding: 0;
+            margin: 0;
+        }
+
+        nav ul li {
+            display: inline-block;
+        }
+
+        nav ul li i {
+            color: #000;
+        }
+
+        .sidebar {
+            width: 85px; 
+            /* background-color: #df974a; */
+            background-color:  #db6825;
+            color: white;
+            height: calc(100vh - 80px); 
+            position: fixed;
+            top: 80px; 
+            left: 0;
+            box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
+            padding: 15px 10px;
+            z-index: 999; 
+        }
+
+        .sidebar h2 {
+            text-align: center;
+            margin-bottom: 20px;
+            font-size: 16px; 
+        }
+
+        .sidebar ul {
+            list-style: none;
+            padding: 0;
+        }
+
+        .sidebar ul li {
+            margin-top:25px;
+            margin: 15px 0;
+            text-align: center;
+        }
+
+        .sidebar ul li a {
+            color: white;
+            text-decoration: none;
+            width:100%;
+            font-size: 21px;
+            display: block;
+            margin-bottom:30px;
+        }
+
+        .logout-icon{
+            margin-top:470px;
+        }
+        .main-content {
+            height: 100vh;
+            margin-left: 85px;
             padding: 20px;
+            padding-top: 70px;
+            display: flex;
+            position: relative;
+            justify-content: space-between;
+            align-items: center;
+        }
+
+        .mestre-cuca-logo {
+            width: 100%;
+            height: 40px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            margin-bottom: 17px;
+        }
+
+        .mestre-cuca-logo img {
+            width: 100px;
+            height: 100px;
+            margin-bottom: 40px;
+        }
+
+        form {
+            display: flex;
+            flex-direction: column;
+            height: 550px;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .form-section {
+            width: 100%;
+            border-radius: 5px;
+        }
+
+        .form-section-1 {
+            display: flex;
+            width: 100%;
+            justify-content: space-around;
         }
 
         .form-container {
-            max-width: 800px;
+            max-height: 700px;
+            max-width: 550px;
             margin: 0 auto;
             background-color: white;
             padding: 30px;
@@ -22,13 +170,15 @@
         }
 
         h1 {
-            color: #2c3e50;
+            background-image: linear-gradient(to right,  #db6825, #df974a);
+            background-clip: text;  
+            color: transparent; 
             text-align: center;
-            margin-bottom: 30px;
+            margin-bottom: 5px;
         }
 
         .input-group {
-            margin-bottom: 25px;
+            margin-bottom: 10px;
         }
 
         label {
@@ -36,45 +186,49 @@
             margin-bottom: 8px;
             color: #34495e;
             font-weight: bold;
+            font-size: 14px;
+            margin-left: 5px;
         }
 
-        input[type="text"], 
-        select,
         textarea {
             width: 100%;
             padding: 12px;
             border: 1px solid #bdc3c7;
             border-radius: 5px;
-            font-size: 16px;
+            font-size: 14px;
+            box-sizing: border-box;
+        }
+
+        input[type="text"], select {
+            width: 90%;
+            margin-left: 5px;
+            padding: 12px;
+            border: 1px solid #bdc3c7;
+            border-radius: 5px;
+            font-size: 14px;
             box-sizing: border-box;
         }
 
         textarea {
             height: 150px;
-            resize: vertical;
-        }
-
-        .category-options {
-            display: grid;
-            grid-template-columns: repeat(2, 1fr);
-            gap: 10px;
+            overflow-y: scroll;
         }
 
         button {
-            background-color: #27ae60;
+            background-color: black;
             color: white;
             padding: 15px 30px;
             border: none;
-            border-radius: 5px;
+            border-radius: 20px;
             font-size: 16px;
             cursor: pointer;
             transition: background-color 0.3s;
-            width: 100%;
-            margin-top: 20px;
+            width: 40%;
+            margin-top: 5px;
         }
 
         button:hover {
-            background-color: #219a52;
+            background-color: #db6825;
         }
 
         .required {
@@ -82,64 +236,359 @@
             margin-left: 3px;
         }
 
-        .form-section {
-            margin-bottom: 30px;
-            padding: 20px;
-            background-color: #f9f9f9;
-            border-radius: 5px;
+        textarea:focus, select:focus, input:focus {
+            outline: none;
         }
+
+        .modal {
+            display: none;
+            position: fixed;
+            z-index: 1001; 
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            overflow: auto;
+            background-color: rgba(0,0,0,0.5);
+        }
+
+        .modal-content {
+            margin: auto;
+            padding: 0;
+            width: 80%;
+            max-width: 550px;
+            border-radius: 10px;
+            position: relative;
+            top: 50%; 
+            transform: translateY(-50%); 
+        }
+
+        .close {
+            color: #aaa;
+            float: right;
+            font-size: 28px;
+            font-weight: bold;
+            margin: 10px;
+        }
+
+        .close:hover,
+        .close:focus {
+            color: black;
+            text-decoration: none;
+            cursor: pointer;
+        }
+
+        .add-recipe {
+            margin-top: 20px;
+            background-color:transparent;
+            border-radius: 10px;
+            box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+            width: 30%;
+            height: 200px;
+            position: relative;
+            display:flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            border-style: dashed;
+        }
+
+        .add-recipe h2 {
+            font-size: 17px;
+        }
+
+
+
+        #openModal {
+            background-color: #df974a;
+            width: 40%;
+            font-size: 17px;
+        }
+
+        .perfil {
+            display: flex;
+            width: 30%;
+            height: 80%;
+            background-color: #db6825;
+            margin-right: 20px;
+            flex-direction: column;
+            align-items: center;
+            border-radius: 30px;
+        }
+
+        .perfil h1 {
+            margin-top: 20px;
+            margin-bottom: 10px;
+            color: white;
+        }
+
+        .perfil p {
+            color: white;
+            font-size: 19px;
+        }
+
+        .my-recipes {
+            justify-content:space-evenly;
+            display: flex;
+            flex-wrap: wrap;
+            width: 70%;
+            height: 80%;
+            border-radius: 30px;
+            border: 1px solid rgb(215, 215, 215);
+            box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+            overflow-y: scroll;
+        }
+
+        .div-image-user {
+            background-color:#eb8b53;
+            border-radius: 70px;
+            display: flex;
+            height: 310px;
+            width: 300px;
+        }
+
+        .div-image-user img {
+            margin-top: 5px;
+            height: 290px;
+            width: 300px;
+        }
+
+        .nome-user, .email-user {
+            width: 100%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .nome-user p, .email-user p {
+            margin-left: 10px;
+        }
+
+        h3, h5 {
+            color: white;
+        }
+
+        .see-my-recipes {
+            display: none;
+            margin-top: 20px;
+            background-color: #db6825;
+            border-radius: 10px;
+            box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+            width: 30%;
+            height: 200px;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .user-recipes {
+            display: flex;
+            align-items: center;
+            justify-content: space-around;
+            width: 100%;
+            height: 10%;
+            margin-top: 10px;
+            margin-bottom: 10px;
+        }
+
+        .user-recipes img {
+            width: 40px;
+            height: 40px;
+            margin-right: 120px;
+        }
+
+        .recipes-content {
+            background-color:#eb8b53;
+            display: flex;
+            height: 80%;
+            width: 90%;
+            padding-top: 5px;
+            padding-left: 10px;
+            border-radius: 10px;
+            overflow-y: scroll;
+        }
+
+        #button-recipes {
+            height: 30px;
+            width: 40%;
+            background-color: #df974a;
+            margin-bottom: 10px;
+            text-align: center;
+            margin-top: 10px;
+            font-size: 12px;
+            padding: 5px;
+            
+        }
+
+
     </style>
 </head>
 <body>
-    <div class="form-container">
-        <h1>📝 Cadastro de Nova Receita</h1>
-        
-        <form action="{{url_for('recipes.cadastrar_receitas')}}" method="post">
-            <div class="form-section">
-                <div class="input-group">
-                    <label>Nome do Usuário <span class="required">*</span></label>
-                    <input type="text" name="nome_user" required>
-                </div>
+    <header>
+        <div class="logo">
+            <img src="/static/images/mestre-cuca_logo.png" alt="Logo do Sistema" id="logo-sistema">
+        </div>
+    </header>
 
-                <div class="input-group">
-                    <label>Nome da Receita <span class="required">*</span></label>
-                    <input type="text" name="nome_receita" required>
-                </div>
-
-                <div class="input-group">
-                    <label>Categoria da Receita <span class="required">*</span></label>
-                    <select name="categoria" required>
-                        <option value="">Selecione uma categoria</option>
-                        <option value="saudavel">Saudável</option>
-                        <option value="sobrimesa">Sobremesa</option>
-                        <option value="salgado">Salgado</option>
-                        <option value="massas">Massas</option>
-                    </select>
-                </div>
-            </div>
-
-            <div class="form-section">
-                <div class="input-group">
-                    <label>Ingredientes <span class="required">*</span></label>
-                    <textarea 
-                        name="ingredientes" 
-                        placeholder="Liste os ingredientes, separando cada um por linha..."
-                        required></textarea>
-                </div>
-            </div>
-
-            <div class="form-section">
-                <div class="input-group">
-                    <label>Modo de Preparo <span class="required">*</span></label>
-                    <textarea 
-                        name="modo_preparo" 
-                        placeholder="Descreva o passo a passo da receita..."
-                        required></textarea>
-                </div>
-            </div>
-
-            <button type="submit">Salvar Receita</button>
-        </form>
+    <div class="sidebar">
+        <h2>Menu</h2>
+        <ul>
+            <li><a href="{{url_for('recipes.cadastrar_receitas')}}"><i class="fa-solid fa-user"></i></a></li>
+            <li><a href="{{url_for('recipes.pagina_receitas')}}"><i class="fa-solid fa-utensils"></i></a></li>
+            <li><a href="{{url_for('users.logout')}}" class="logout-icon"><i class="fa-solid fa-right-from-bracket"></i></a></li>
+        </ul>
     </div>
+
+    <div class="main-content">
+
+
+        <div class="perfil">
+
+            <h1>Meu Perfil</h1>
+
+            <div class="div-image-user">
+                <img src="/static/images/mestre-cuca-perfil.png">
+            </div>
+            <br>
+            
+
+            <div class="nome-user">
+                
+                <h3>User:</h3>
+                <p>{{ user.nome }}</p>
+
+            </div>
+            <br>
+            <div class="email-user">
+                <h3>Email:</h3>
+                <p>{{ user.email}}</p>
+
+            </div>   
+
+
+        </div>
+
+        <div class="my-recipes">
+
+            <div class="add-recipe">
+                <h2>Adicionar receita</h2>
+                <br>
+                <button id="openModal"><i class="fa-solid fa-plus"></i></button>
+            </div>
+
+            
+            <div class="see-my-recipes" id="seeMyRecipes">
+
+                <div class="user-recipes">
+                    <img src="/static/images/mestre-cuca-icon-chapeu.png">
+                    <h5>{{ user.nome }}</h5>
+                </div>
+
+                <div class="recipes-content">
+                    <h5>Ingredientes</h5>
+                    {% for receita in receitas %}
+                    <p>{{ receita.ingredientes }}</p>
+
+                    {% endfor %}
+
+                    
+
+                </div>
+
+                <button type="submit" id="button-recipes">Abrir</button>
+
+            </div>
+
+          
+            </div>
+            
+        </div>
+
+        </div>
+
+        <div id="myModal" class="modal">
+            <div class="modal-content">
+                <span class="close">&times;</span>
+                <div class="form-container">
+                    <div class="mestre-cuca-logo">
+                        <img src="/static/images/mestre-cuca_login.png">
+                    </div>
+                    <h1>Cadastro de Nova Receita</h1>
+                    <form action="{{url_for('recipes.cadastrar_receitas')}}" method="post">
+                        <div class="form-section-1">
+                            <div class="input-group">
+                                <label>Nome do Usuário <span class="required">*</span></label>
+                                <input type="text" name="nome_user" required>
+                            </div>
+                            <div class="input-group">
+                                <label>Nome da Receita <span class="required">*</span></label>
+                                <input type="text" name="nome_receita" required>
+                            </div>
+                            <div class="input-group">
+                                <label>Categoria da Receita <span class="required">*</span></label>
+                                <select name="categoria" required>
+                                    <option value="">Selecione uma categoria</option>
+                                    <option value="saudavel">Saudável</option>
+                                    <option value="sobrimesa">Sobremesa</option>
+                                    <option value="salgado">Salgado</option>
+                                    <option value="massas">Massas</option>
+                                </select>
+                            </div>
+                        </div>
+
+                        <div class="form-section">
+                            <div class="input-group">
+                                <label>Ingredientes <span class="required">*</span></label>
+                                <textarea name="ingredientes" placeholder="Liste os ingredientes, separando cada um por linha..." required></textarea>
+                            </div>
+                        </div>
+
+                        <div class="form-section">
+                            <div class="input-group">
+                                <label>Modo de Preparo <span class="required">*</span></label>
+                                <textarea name="modo_preparo" placeholder="Descreva o passo a passo da receita..." required></textarea>
+                            </div>
+                        </div>
+
+                        <button type="submit" id="recipeForm">Salvar Receita</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <script>
+        var modal = document.getElementById("myModal");
+        var btn = document.getElementById("openModal");
+        var span = document.getElementsByClassName("close")[0];
+        var seeMyRecipes = document.getElementById("seeMyRecipes");
+
+        btn.onclick = function() {
+            modal.style.display = "block";
+        }
+
+        span.onclick = function() {
+            modal.style.display = "none";
+        }
+
+        window.onclick = function(event) {
+            if (event.target == modal) {
+                modal.style.display = "none";
+            }
+        }
+
+        // Exibir a div see-my-recipes após o cadastro
+        document.getElementById("recipeForm").onsubmit = function(event) {
+            event.preventDefault();  // Impede o comportamento padrão do formulário
+
+            // Aqui você pode adicionar lógica para enviar o formulário via AJAX ou
+            // simplesmente redirecionar após o envio.
+
+            // Simulação de sucesso no cadastro
+            seeMyRecipes.style.display = "flex"; // Exibe a div
+            modal.style.display = "none"; // Fecha o modal
+        };
+
+    </script>
 </body>
 </html>
