--- a/MestreCuca/templates/pagina_receitas.html
+++ b/MestreCuca/templates/pagina_receitas.html
@@ -88,63 +88,63 @@
 
         .main-content {
             margin-top: 50px;
-            height: calc(100vh - 80px); /* Ajusta a altura para não ultrapassar o cabeçalho */
+            height: calc(100vh - 80px); 
             margin-left: 85px;
             padding: 10px;
             padding-top: 70px;
             display: flex;
-            flex-wrap: wrap; /* Permite a quebra de linha */
-            justify-content: flex-start; /* Alinha à esquerda */
+            flex-wrap: wrap; 
+            justify-content: flex-start;
             
         }
 
         .recipe-card {
-            background-color: #db6825; /* Cor de fundo da receita */
-            border-radius: 10px; /* Bordas arredondadas */
-            box-shadow: 0 0 20px rgba(0, 0, 0, 0.1); /* Sombra */
-            width: calc(30%); /* Largura da div da receita */
-            margin: 5px; /* Margem de 5px entre as receitas */
-            padding: 10px; /* Espaçamento interno */
+            background-color: #db6825; 
+            border-radius: 10px; 
+            box-shadow: 0 0 20px rgba(0, 0, 0, 0.1); 
+            width: calc(30%); 
+            margin: 5px; 
+            padding: 10px; 
             display: flex;
-            flex-direction: column; /* Alinhamento vertical */
-            overflow: hidden; /* Para evitar que os conteúdos excedam o tamanho da div */
+            flex-direction: column; 
+            overflow: hidden; 
         }
 
         .user-recipes {
             display: flex;
             align-items: center;
-            justify-content: flex-start; /* Alinha à esquerda */
+            justify-content: flex-start; 
             width: 100%;
-            margin-bottom: 10px; /* Espaçamento entre as seções */
+            margin-bottom: 10px; 
         }
 
         .user-recipes img {
-            width: 40px; /* Largura da imagem */
-            height: 40px; /* Altura da imagem */
-            margin-right: 10px; /* Espaço entre a imagem e o nome */
+            width: 40px; 
+            height: 40px;
+            margin-right: 10px; 
         }
 
         .recipes-content {
-            background-color: #eb8b53; /* Cor de fundo da seção de ingredientes */
+            background-color: #eb8b53; 
             display: flex;
-            flex-direction: column; /* Empilha verticalmente */
-            width: 100%; /* Largura total */
-            padding: 10px; /* Espaçamento interno */
-            border-radius: 5px; /* Bordas arredondadas */
-            margin-bottom: 10px; /* Espaçamento entre as receitas */
-            overflow-y: auto; /* Adiciona rolagem se o conteúdo exceder */
-            max-height: 100px; /* Limita a altura da div de ingredientes */
+            flex-direction: column; 
+            width: 100%; 
+            padding: 10px; 
+            border-radius: 5px; 
+            margin-bottom: 10px; 
+            overflow-y: auto; 
+            max-height: 100px; 
         }
 
         .button-recipes {
-            height: 40px; /* Altura do botão */
-            width: 100%; /* Faz o botão ocupar toda a largura */
-            background-color: #df974a; /* Cor de fundo do botão */
-            color: white; /* Cor do texto do botão */
-            border: none; /* Remove borda padrão */
-            border-radius: 5px; /* Bordas arredondadas */
-            cursor: pointer; /* Muda o cursor para indicar que é clicável */
-            margin-top: 10px; /* Espaçamento acima do botão */
+            height: 40px; 
+            width: 100%; 
+            background-color: #df974a; 
+            color: white; 
+            border: none; 
+            border-radius: 5px; 
+            cursor: pointer; 
+            margin-top: 10px; 
         }
 
         .my-recipes {
@@ -163,7 +163,7 @@
         }
 
         .modal {
-            display: none; /* Oculta o modal inicialmente */
+            display: none; 
             position: fixed;
             z-index: 1001; 
             left: 0;
